k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: detailing
spec:
  type: ClusterIP
  selector:
    app: detailing
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
